# mirrorfree-filer

./: .gitignore  README.md  pyproject.toml
src/mirrorfree_filer/: __init__.py  accounts.py  cli.py  draft_filing.py  filing_file.py  main.py  models.py  xml_builder.py
tests/: test_accounts.py  test_basic.py  test_cli.py  test_draft_filing.py  test_filing_file.py  test_models.py  test_xml_builder.py
