[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirrorfree-filer"
version = "0.1.0"
description = "Python package for filing dormant LLP accounts for Mirror Free LLP"
requires-python = ">=3.12"
authors = [
    {name = "freeal"}
]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
mirrorfree-filer = "mirrorfree_filer.cli:main"

[project.urls]
Homepage = "https://github.com/freeal/mirrorfree-filer"
Repository = "https://github.com/freeal/mirrorfree-filer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
